# firmware

./: .gitignore  CMakeLists.txt  README.md  pinout.md  sdkconfig  sdkconfig.old
components/config/: CMakeLists.txt  ConfigManager.cpp
components/config/include/: ConfigManager.h  enums.h
components/constants/: CMakeLists.txt
components/constants/include/constants/: app_comms.h  config.h  datalink.h  module.h  rmt.h  tcp.h  udp.h  wifi.h
components/dataLink/: CMakeLists.txt  DataLinkFrames.cpp  DataLinkManager.cpp  DataLinkRIP.cpp  DataLinkScheduler.cpp  README.md
components/dataLink/images/: wired_communication_diagram.drawio
components/dataLink/include/: DataLinkManager.h  Frames.h  Scheduler.h  Tables.h
components/dataLink/test/: CMakeLists.txt  test_dataLink.cpp
components/dataLink/test_scripts/: parse_bit_frame.py
components/flatbuffers/: AngleControlMessageBuilder.cpp  CMakeLists.txt  MPIMessageBuilder.cpp  MovementSetBuilder.cpp  SensorMessageBuilder.cpp  TopologyBuilder.cpp  TopologyMessageBuilder.cpp
components/flatbuffers/include/: AngleControlMessageBuilder.h  MPIMessageBuilder.h  MovementSetBuilder.h  SensorMessageBuilder.h  SerializedMessage.h  TopologyBuilder.h  TopologyMessageBuilder.h  Variant.h
components/flatbuffers/include/flatbuffers/: README.md
components/flatbuffers/include/flatbuffers_generated/: AngleControlMessage_generated.h  ConfigMessage_generated.h  MPIMessage_generated.h  Movement_generated.h  RobotConfiguration_generated.h  RobotModule_generated.h  SensorMessage_generated.h  TopologyMessage_generated.h  Topology_generated.h
components/logger/: CMakeLists.txt  logger.cpp
components/logger/include/: logger.h
components/movements/: CMakeLists.txt  MovementManager.cpp  MovementSetManager.cpp  README.md  TopologyManager.cpp  movements.cpp
components/movements/include/: MovementBlobs.h  MovementManager.h  MovementSetManager.h  TopologyBlobs.h  TopologyManager.h  movements.h
components/ptrQueue/include/: BlockingPriorityQueue.h  PtrQueue.h
components/rmt/: CMakeLists.txt  README.md  RMTManager.cpp
components/rmt/include/: RMTManager.h  RMTSymbols.h
components/rpc/: CMakeLists.txt  CommunicationFactory.cpp  CommunicationRouter.cpp  DiscoveryService.cpp  MessagingInterface.cpp  OrientationDetection.cpp  TCPServer.cpp  WifiManager.cpp  mDNSDiscoveryService.cpp  rpc.cpp
components/rpc/include/: CommunicationFactory.h  CommunicationRouter.h  DiscoveryService.h  ICommunicationRouter.h  IConnectionManager.h  IDiscoveryService.h  IMessagingInterface.h  IRPCServer.h  IWifiManager.h  MessagingInterface.h  OrientationDetection.h  RPCFactory.h  TCPServer.h  WifiManager.h  mDNSDiscoveryService.h
components/rpc/include/wireless/: TCPServer.h  UDPServer.h  WifiManager.h  mDNSDiscoveryService.h
components/rpc/wireless/: TCPServer.cpp  UDPServer.cpp  WifiManager.cpp  mDNSDiscoveryService.cpp
main/: CMakeLists.txt  LoopManager.cpp  LoopManager.h  README.md  link_layer_main.cpp  main.cpp  main_preprogrammed_test.cpp  main_rmt_test.cpp  main_rmt_timing.cpp
main/control/: ActuatorFactory.cpp  DCMotorActuator.cpp  README.md  Servo1Actuator.cpp
main/include/: LoopManager.h
main/include/control/: ActuatorFactory.h  DCMotorActuator.h  IActuator.h  ISensor.h  SensorFactory.h  Servo1Actuator.h
main/include/util/: number_utils.h
test/: CMakeLists.txt  sdkconfig  sdkconfig.defaults
test/main/: CMakeLists.txt  main.cpp
